--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <form action="https://api.web3forms.com/submit" method="POST">
       <!-- Replace with your Access Key -->
-      <input type="hidden" name="access_key" value="YOUR_ACCESS_KEY_HERE" />
+      <input type="hidden" name="access_key" value="1fed5962-dc1c-4633-980e-3eeee03643c4" />
 
       <!-- Form Inputs. Each input must have a name="" attribute -->
       <label for="username">Username:</label>
